static/css/campout.css
.participant-list dl,
.participant-list dt {
  font-size: 12px;
}

.participant-list dl {
  display: grid;
  grid-template-columns: max-content auto;
}

.participant-list dt {
  grid-column-start: 1;
  padding: 0px 10px;
}

.participant-list dd {
  grid-column-start: 2;
}

.participant-list div:nth-child(2n) {
  background-color: lightgray;
}

.participant {
	position: relative;
}

.delete-participant {
	position: absolute;
	right: 0px;
	padding: 0px 10px;
}

#final .delete-participant {
  display: none;
}

.edit-participant {
  position: absolute;
  right: 30px;
  padding: 0px 10px;
}

#final .edit-participant {
  display: none;;
}

.carousel .carousel-item {
    transition-duration: 0.5s;
}

#summary .quantity {
  text-align: center;
}

